--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,11 +10,26 @@ body {
   margin: 0;
   font-family: Rajdhani, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden !important;
 }
 
 body::-webkit-scrollbar {
   display: none;
 }
+
+/* body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #3f0d12;
+  background-image: linear-gradient(315deg, #3f0d12 0%, #a71d31 74%);
+  outline: 1px solid slategrey;
+} */
 
 a {
   color: inherit;
